--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         </p>
                     </div>
                     <div class="col-lg-3 cta-btn-container text-center">
-                        <a class="cta-btn align-middle" href="https://sarangit187028451.wordpress.com/" target="_blank">Preview Web Sarang IT</a>
+                        <a class="cta-btn align-middle" href="https://sarang-it.com/" target="_blank">Preview Web Sarang IT</a>
                     </div>
                 </div>
 
